[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forerunner"
version = "0.0.5"
requires-python = ">=3.10.4"
dependencies = [
  "click==8.1.3",
  "croniter==1.3.7",
  "structlog==22.3.0",
  "rich==13.3.2",
]

[project.scripts]
forerunner = "forerunner.cli:main"
