[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forerunner"
version = "0.0.8"
requires-python = ">=3.8"
dependencies = ["croniter", "structlog"]

[project.optional-dependencies]
dev = ["black", "isort"]

[project.scripts]
forerunner = "forerunner.cli:main"
